feat(gateway):新增用户头像上传接口
